syntax = "proto3";

package models;

import "google/protobuf/timestamp.proto";

option go_package = "schedule-optimizer/internal/proto/generated";

message Session {
  string days = 1;
  int32 start_time = 2;
  int32 end_time = 3;
  string location = 4;
  bool is_async = 5;
  bool is_time_tbd = 6;
}

message Course {
  string subject = 1;
  string title = 2;
  string credits = 3;
  int32 crn = 4;
  string instructor = 5;
  repeated Session sessions = 6;
  double gpa = 7;
  int32 capacity = 8;
  int32 enrolled = 9;
  int32 available_seats = 10;
  string course_string = 11;
}

message CourseList {
  repeated Course courses = 1;
  google.protobuf.Timestamp pull_timestamp = 2;
}
